# Wordle

./: .gitignore  CMakeLists.txt  Kravspecifikation.docx  README.md  dictionary.cc  dictionary.h  dictionary_test.cc  main.cc
src/: dictionary.cc  dictionary.h  main.cc  wordle.cc  wordle.h
test/: dictionary_test.cc  main_test.cc  wordle_test.cc
